# the-random-compiler

./: Cargo.toml  README.MD  grammar.md
lib/lexer/: Cargo.toml
lib/lexer/src/: buffer.rs  lexer.rs  lib.rs  operator.rs  token.rs
lib/parser/: Cargo.toml
lib/parser/src/: grammar.rs  lib.rs  parse_node.rs
lib/parser/src/parsers/: mod.rs  push_down_automata_predictive_parser.rs  recursive_descent_parser.rs
lib/parser/tests/: integration_tests.rs  recursive_descent_parser_tests.rs
lib/parser/tests/snapshots/: integration_tests__it_generates_a_correct_parse_tree.snap  recursive_descent_parser_tests__it_generates_a_correct_parse_tree.snap
src/: main.rs
test-files/: main.cc
