[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
lexer = { workspace = true }
thiserror = { workspace = true }
rstest = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
insta = "1.34.0"
